--- a/src/Makefile
+++ b/src/Makefile
@@ -1,19 +1,22 @@
 # Gateway
 #---------------------------------------------------------------------------
 CC = gcc
-OBJS =  Utilities.o LinkedList.o Mempool.o pkt_Queue.o xbee_Serial.o xbee_API.o
+OBJS =  Utilities.o LinkedList.o Mempool.o pkt_Queue.o xbee_Serial.o xbee_API.o CommUnit.o
 CFLAGS = -std=gnu99
 
 #---------------------------------------------------------------------------
 all: Gateway
 Gateway: $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) Gateway.c Gateway.h -o Gateway -lxbee -lrt -lpthread -lmulticobex -lbfb -lbluetooth -lobexftp -lopenobex
+	$(CC) $(CFLAGS) $(OBJS) Gateway.h Gateway.c -o Gateway -lxbee -lwiringPi -lrt -lpthread
+# -lmulticobex -lbfb -lbluetooth -lobexftp -lopenobex
+CommUnit.o: CommUnit.c CommUnit.h
+	$(CC) $(CFLAGS) CommUnit.c CommUnit.h -c
 Utilities.o: Utilities.c Utilities.h
 	$(CC) $(CFLAGS) Utilities.c Utilities.h -c
 LinkedList.o: LinkedList.c LinkedList.h
-	$(CC) $(CFLAGS) LinkedList.c -c
+	$(CC) $(CFLAGS) LinkedList.c LinkedList.h -c
 Mempool.o: Mempool.c Mempool.h
-	$(CC) Mempool.c Mempool.h $(LIB) -c
+	$(CC) Mempool.c Mempool.h -c
 pkt_Queue.o: pkt_Queue.c pkt_Queue.h
 	$(CC) $(CFLAGS) pkt_Queue.c pkt_Queue.h -c
 xbee_Serial.o: xbee_Serial.c xbee_Serial.h
