Add Wifi SSID and PASS to Gateway Config.

--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -3,3 +3,5 @@ allowed_number_of_nodes=16
 period_between_RFHR=30000
 number_worker_thread=3
 number_priority_levels=3
+WiFi_SSID=test
+WiFi_PASS=test
