--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 # Gateway
 #---------------------------------------------------------------------------
 CC = gcc
-OBJS =  Utilities.o LinkedList.o Mempool.o thpool.o pkt_Queue.o
+OBJS =  Utilities.o LinkedList.o Mempool.o thpool.o pkt_Queue.o UDP_API.o
 CFLAGS = -std=gnu99 -lrt -lpthread
 
 #---------------------------------------------------------------------------
@@ -17,6 +17,8 @@ thpool.o: thpool.c thpool.h
 	$(CC) $(CFLAGS) thpool.c -c
 Mempool.o: Mempool.c Mempool.h
 	$(CC) $(CFLAGS) Mempool.c -c
+UDP_API.o: UDP_API.c UDP_API.h pkt_Queue.o
+	$(CC) $(CFLAGS) UDP_API.c -c
 pkt_Queue.o: pkt_Queue.c pkt_Queue.h
 	$(CC) $(CFLAGS) pkt_Queue.c -c
 clean:
