--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 # Gateway
 #---------------------------------------------------------------------------
 CC = gcc
-OBJS =  Utilities.o LinkedList.o Mempool.o thpool.o pkt_Queue.o UDP_API.o
+OBJS =  BeDIS.o Utilities.o LinkedList.o Mempool.o thpool.o pkt_Queue.o UDP_API.o 
 CFLAGS = -std=gnu99 -lrt -lpthread
 
 #---------------------------------------------------------------------------
@@ -9,6 +9,8 @@ all: Gateway.out
 Gateway.out: $(OBJS) BeDIS.h Gateway.h Gateway.c
 	$(CC) $(CFLAGS) $(OBJS) Gateway.c -o Gateway.out
 # -lmulticobex -lbfb -lbluetooth -lobexftp -lopenobex
+BeDIS.o: BeDIS.c BeDIS.h
+	$(CC) $(CFLAGS) BeDIS.c -c
 Utilities.o: Utilities.c Utilities.h BeDIS.h
 	$(CC) $(CFLAGS) Utilities.c -c
 LinkedList.o: LinkedList.c LinkedList.h
