Add priority to config file.

--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -8,3 +8,7 @@ WiFi_PASS=test
 SERVER_IP=140.109.22.230
 SEND_PORT=9999
 RECV_PORT=8888
+CRITICAL_PRIORITY=-4
+HIGH_PRIORITY=-2
+NORMAL_PRIORITY=0
+LOW_PRIORITY=2
