--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -1,8 +1,9 @@
+Isolated_Mode=1
 IP_address=140.109.22.248
 allowed_number_of_nodes=16
-period_between_RFHR=30000
+period_between_RFHR=3600
+period_between_RFOT=60
 number_worker_thread=3
-number_priority_levels=3
 WiFi_SSID=test
 WiFi_PASS=test
 SERVER_IP=140.109.22.230
