--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -1,13 +1,13 @@
-Isolated_Mode=1
+is_polled_by_server=0
 IP_address=140.109.22.248
 allowed_number_of_nodes=16
 period_between_RFHR=3600
 period_between_RFOT=60
 number_worker_thread=3
-SERVER_IP=140.109.22.230
-SEND_PORT=9999
-RECV_PORT=8888
-CRITICAL_PRIORITY=-4
-HIGH_PRIORITY=-2
-NORMAL_PRIORITY=0
-LOW_PRIORITY=2
+server_ip=140.109.22.230
+send_port=9999
+recv_port=8888
+critical_priority=-4
+high_priority=-2
+normal_priority=0
+low_priority=2
