--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -2,7 +2,7 @@ is_polled_by_server=0
 IP_address=140.109.22.248
 allowed_number_of_nodes=16
 period_between_RFHR=3600
-period_between_RFOT=60
+period_between_RFTOD=60
 number_worker_thread=3
 server_ip=140.109.22.230
 send_port=9999
