--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -8,7 +8,7 @@ number_worker_thread=3
 server_ip=140.109.22.230
 send_port=9999
 recv_port=8888
-critical_priority=-4
+time_critical_priority=-4
 high_priority=-2
 normal_priority=0
 low_priority=2
