--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -1,8 +1,8 @@
-is_geofence=1
-IP_address=140.109.22.248
+is_geofence=0
+IP_address=
 allowed_number_of_nodes=16
-number_worker_thread=3
-server_ip=140.109.22.230
+number_worker_thread=20
+server_ip=
 send_port=9999
 recv_port=8888
 critical_priority=-4
