Change ip_address field to area_id and serial_id

--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -1,5 +1,6 @@
 is_geofence=0
-IP_address=
+area_id=0004
+serial_id=0001
 number_worker_thread=20
 min_age_out_of_date_packet_in_sec=10
 server_ip=
@@ -9,4 +10,4 @@ critical_priority=-4
 high_priority=-2
 normal_priority=0
 low_priority=2
-address_map_time_duration_in_sec=7200
+address_map_time_duration_in_sec=60
