Move default_gateway setting to gateway.conf to handle upgrade case.

--- a/config/gateway.conf
+++ b/config/gateway.conf
@@ -1,9 +1,9 @@
 is_geofence=0
-area_id=0004
+area_id=0003
 serial_id=0001
 number_worker_thread=20
 min_age_out_of_date_packet_in_sec=10
-server_ip=
+server_ip=192.168.1.110
 send_port=9999
 recv_port=8888
 critical_priority=-4
@@ -11,3 +11,4 @@ high_priority=-2
 normal_priority=0
 low_priority=2
 address_map_time_duration_in_sec=60
+default_gateway=192.168.1.1
